2007-06-05  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.11.7  (mainly for R-devel)

2007-06-02  Martin Maechler  <maechler@stat.math.ethz.ch>

	* man/plot.diana.Rd, etc: s/dendrogramm/dendrogram/

2007-05-31  Martin Maechler  <maechler@stat.math.ethz.ch>

	* man/plantTraits.Rd: add \encoding{latin1}

2007-04-09  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.11.6 - needed
	for R version >= 2.6.0.

	* R/daisy.q (daisy): for 2-valued variables only warn about
	non-specified type when  n >= 10.

2007-04-07  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/diana.q (diana): don't use as.double(.) and DUP=FALSE !

2007-03-30  Martin Maechler  <maechler@stat.math.ethz.ch>

	* man/diana.Rd: merge man/diana.object.Rd into *one* help file

	* DESCRIPTION (Version): 1.11.5 - for R 2.5.0

2007-03-29  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/silhouette.R (silhouette.default): use x$clustering only when x is
	a list.

2006-12-11  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.11.4 -- ready

	* tests/to-25x, tests/to-24x:    different outputs for R 2.5.0 (unstable)
	* tests/clara.Rout.save-R25x,..: and R-2.4.x

	* tests/silhouette-default.R: use [as.integer(rownames(.)), ]
		since we cannot guarantee rownames there.

2006-12-05  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/fanny.c (fuzzy): 14 instead of 15 sign.digits for trace_lev >= 2
		printing.

	* R/clara.q (stop): message for NA-observations: only show first
	dozen of observation numbers.
	* tests/clara-NAs.R: test the above
	* tests/clara-NAs.Rout.save: ditto

2006-12-02  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.11.3 -- released to CRAN

	* R/daisy.q (daisy): finish metric "gower", and test an example

2006-12-01  Martin Maechler  <maechler@stat.math.ethz.ch>

	* man/daisy.Rd: more content about Gower; thanks to Gavin Simpson
