@@ -1,6 +1,6 @@
 Package: cluster
-Version: 1.11.7
-Date: 2007-06-05
+Version: 1.11.8
+Date: 2007-09-03
 Priority: recommended
 Author: Martin Maechler, based on S original by Peter Rousseeuw <rousse@uia.ua.ac.be>,
 	Anja.Struyf@uia.ua.ac.be and Mia.Hubert@uia.ua.ac.be,
