@@ -1,3 +1,12 @@
+2007-09-04  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* src/mona.f (mona): dummy initializations for "-Wall"
+	* src/fanny.c (fygur): dummy init 'lang'
+
+2007-08-23  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* src/daisy.f et al: de-tabify the fortran sources
+
 2007-06-05  Martin Maechler  <maechler@stat.math.ethz.ch>
 
 	* DESCRIPTION (Version): 1.11.7  (mainly for R-devel)
